[Chromium] Modify Android's user agent CSS to not set a border-radius on select elements https://bugs.webkit.org/show_bug.cgi?id=106327
Reviewed by Adam Barth.

Android's user agent CSS overrides the style applied to <select>
elements with a @size or @multiple attribute, and then applies
(among other things) a border-radius of 5 pixels. While select
elements with a larger size or multiple selection should appear
as drop-down boxes for now, setting the border radius causes
Chromium to skip rendering the background and border, making
them hard to read when the page relies on the default styling.

This is covered by existing pixel tests.

* css/themeChromiumAndroid.css:
(select[size][multiple]):


Canonical link: https://commits.webkit.org/124543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139087 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/themeChromiumAndroid.css
+++ b/Source/WebCore/css/themeChromiumAndroid.css
@@ -36,6 +36,6 @@ select[size][multiple] {
     -webkit-appearance: menulist;
     -webkit-box-align: center;
     border: 1px solid;
-    border-radius: 5px;
+    border-radius: initial;
     white-space: pre;
 }
